# pac-framework

./: .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: generate_pdf.py
examples/: quickstart.py
pac_framework/: __init__.py  __main__.py
pac_framework/core/: data_model.py  manifest_migrations.py  seed_util.py
pac_framework/generator/: __init__.py  background.py  bursts.py  config.py  couplings.py  line_noise.py  oscillator.py  pipeline.py  projection.py  runner.py  scheduling.py
pac_framework/gui/: _table_utils.py  main_window.py  persistence.py  subject_state.py
pac_framework/gui/tabs/: data_browser.py  signal_config.py  subject_designer.py
pac_framework/gui/tracks/: __init__.py  base.py  filtered_track.py  signal_track.py  spectrogram_track.py
pac_framework/gui/widgets/: coupling_modulation_dialog.py  oscillator_advanced_dialog.py  timeline_preview.py  tracked_viewer.py
pac_framework/tests/: test_artifacts.py  test_background.py  test_bursts.py  test_couplings.py  test_g5b_event_modulation.py  test_ground_truth_pipeline.py  test_line_noise.py  test_manifest_migrations.py  test_oscillator.py  test_pipeline.py  test_projection.py  test_scheduling.py  test_seed_util.py  test_session_roundtrip.py  test_signal_config.py  test_signal_config_tab.py
