[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pacgen"
version = "0.1.0"
description = "Synthetic iEEG generator and PAC-metric benchmark"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "h5py",
    "pydantic>=2",
    "PyQt6",
    "matplotlib",
    "fooof",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "fpdf2"]

[project.scripts]
pacgen = "pac_framework.__main__:main"

[project.urls]
Homepage    = "https://github.com/adhamq/pac-framework"
"Bug Tracker" = "https://github.com/adhamq/pac-framework/issues"

[tool.setuptools.packages.find]
include = ["pac_framework*"]

[tool.setuptools.package-data]
"pac_framework" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["pac_framework/tests"]
addopts   = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
